--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
 		"clsx": "^2.0.0",
 		"eslint": "8.48.0",
 		"eslint-config-next": "14.2.1",
+		"flowbite": "^2.3.0",
+		"flowbite-react": "^0.9.0",
 		"framer-motion": "^11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"next": "14.2.1",
